--- a/assets/styles.css
+++ b/assets/styles.css
@@ -11,7 +11,6 @@ body {
   background: linear-gradient(to bottom right, #510606 , #060000); /* Standard syntax (must be last) */
   background-attachment: fixed;
   background-repeat: no-repeat;
-  color: #fff;
   height: 100%;
   margin: 0;
 }
@@ -30,6 +29,7 @@ body {
 .goal {
   background: #3A3930;
   border-radius: 10px;
+  color: #fff;
   display: inline-block;
   margin: 5px;
   min-width: 173px;
@@ -57,9 +57,23 @@ h2 {
   margin: 0;
 }
 
-/* Oscar */
-.oscar .img {
-  background-image: url('images/oscar.jpg');
+/* Site Logo */
+h1 {
+  color: #fff;
+  font-size: 70px;
+  margin: 10px 50px;
+  text-align: center;
+  transform: rotate(-0.03turn);
+  vertical-align: top;
+  width: 350px;
+}
+
+/* Message board */
+.message-board {
+  background: #fff;
+  margin: 0 auto;
+  max-width: 500px;
+  text-align: center;
 }
 
 /* Dropdown movie results */
@@ -73,4 +87,15 @@ h2 {
 
 li {
   padding: 2px 0;
+}
+
+/* Oscar */
+.oscar .img {
+  background-image: url('images/oscar.jpg');
+}
+
+/* Error */
+.error {
+  color: red;
+  height: 60px;
 }
